Se modificó CSS y HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="pokeball" src="pokeball.png">
         </div>
         <div class="row" id="pokemones">
-            <div id="pokedex">
+            <div id="pokedex" class="fondo">
                 <div id="icono"></div>
                 <div id="informacion"></div>
             </div>
